gap between home img and home posts fixed, now fix the size of home post container div

--- a/src/globals.css
+++ b/src/globals.css
@@ -140,15 +140,15 @@
 
    /* Home */
   .home-posts-container {
-    @apply flex flex-col items-center gap-10 overflow-scroll py-10 px-5 md:px-8 custom-scrollbar bg-gray-400 z-0;
+    @apply flex flex-col items-center gap-10 overflow-scroll py-4 px-5 custom-scrollbar;
   }
 
   .home-posts {
-    @apply max-w-screen-sm flex flex-col items-center w-full gap-6 md:gap-9 lg:p-14;
+    @apply max-w-screen-sm flex flex-col items-center w-full gap-6;
   }
 
   .home-img-container {
-    @apply relative w-full overflow-hidden pt-10 pb-10 px-4 sm:px-8 md:px-12 lg:px-16 xl:px-32 2xl:px-64 transition-all duration-200 ease-in-out z-10;
+    @apply relative w-full pt-6 pb-10 px-1 sm:px-2 md:px-4 lg:px-8 xl:px-16 2xl:px-32 transition-all duration-200 ease-in-out;
   }
 
   .home-creators {
